10_ingress_controller/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rules
spec:
  rules:
    - host: helloworld-v1.example.com
      http:
        paths:
          - path: /
            backend: 
              serviceName: helloworld-v1
              servicePort: 80

    - host: helloworld-v2.example.com
      http:
        paths:
          - path: /
            backend: 
              serviceName: helloworld-v2
              servicePort: 80
